Fix hero image responsiveness on small screen height

--- a/src/components/homepage/Hero.module.css
+++ b/src/components/homepage/Hero.module.css
@@ -2,27 +2,39 @@
 
 .hero {
 	display: flex;
-	height: calc(100vh - 10rem);
+	height: calc(100vh - 8rem);
 	flex-direction: column;
-	padding-top: 6rem;
+	padding-top: 5rem;
 	align-items: center;
-	/* position: relative; */
+	position: relative;
 }
 
 .hero__title {
-	display: flex;
+	position: absolute;
+	top: 15%;
+	/* display: flex;
 	flex-direction: column;
 	justify-content: center;
-	margin-top: 3rem;
+	margin-top: 3rem; */
 }
 
 .hero__title h1 {
 	font-family: "General Sans", sans-serif;
-	font-size: clamp(3rem, 10vw, 8rem);
+	font-size: clamp(2rem, 8vw, 12rem);
 	text-transform: uppercase;
 	font-weight: 900;
 	line-height: 1;
 	letter-spacing: -0.04em;
+}
+
+@media (height < 1600px) {
+	.hero__title h1 {
+		font-size: clamp(2rem, 11vh, 10rem);
+	}
+
+	.hero__title {
+		top: 22%;
+	}
 }
 
 .outlined {
@@ -31,12 +43,17 @@
 	-webkit-text-stroke-color: black;
 }
 
-.hero__image {
-	position: absolute;
+img {
+	/* position: absolute; */
 	z-index: -1;
 	-webkit-mask-image: linear-gradient(#000, rgba(0, 0, 0, 0));
 	mask-image: linear-gradient(#000, rgba(0, 0, 0, 0));
-	width: 952px;
+	width: auto;
+	max-width: 75%;
+	height: clamp(300px, 60svh, 680px);
+	/* aspect-ratio: 12/8; */
+	object-fit: cover;
+	object-position: center;
 }
 
 .hero__socials {
@@ -44,13 +61,13 @@
 	flex-direction: column;
 	position: absolute;
 	left: 5rem;
-	bottom: 8rem;
+	bottom: 4rem;
 	gap: 1rem;
 }
 
 .hero__scroll_indicator {
 	position: absolute;
-	bottom: 8rem;
+	bottom: 2rem;
 	right: 5rem;
 	transform: translate(-50%, -50%);
 }
@@ -59,7 +76,7 @@
 	width: 30px;
 	height: 60px;
 	border-radius: 40px;
-	border: 1px solid #000;
+	border: 1px solid hsla(0, 0%, 0%, 0.301);
 }
 
 .hero__scroll_indicator::before {
